test/Fail/NoIrrelevance1.agda
{-# OPTIONS --no-irrelevance #-}

postulate f : .Set → Set
